--- a/_sass/_ed.scss
+++ b/_sass/_ed.scss
@@ -585,13 +585,13 @@ a.sidebar-nav-item:focus {
 /* Green*/
 .theme-base-green .sidebar,
 .theme-base-green .sidebar-toggle:active {
-  background-color: #90a959;
+  background-color: #577713;
 }
 
 .theme-base-green .container a,
 .theme-base-green .sidebar-toggle,
 .theme-base-green .related-posts li a:hover {
-  color: #90a959;
+  color: #577713;
 }
 
 /* Cyan*/
