--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
     {% if page.layout == "default" %}
     <meta property="og:title" content="{{page.title}}" />
     <meta property="og:description" content="{{site.description}}">
-    <meta property="fb:admins" content="elotroalex" />
+    <meta property="fb:admins" content="scholarslab/praxis2018" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="{{site.url}}{{site.baseurl}}{{page.url}}" />
     <meta property="fb:app_id" content="589495744558280" />
@@ -31,8 +31,8 @@
 
     {% else %}
     <meta property="og:title" content="{{page.title}}" />
-    <meta property="og:description" content="An Ed edition">
-    <meta property="fb:admins" content="elotroalex" />
+    <meta property="og:description" content="A Public Domain Resource">
+    <meta property="fb:admins" content="scholarslab/praxis2018" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="{{site.url}}{{site.baseurl}}{{page.url}}" />
     <meta property="fb:app_id" content="589495744558280" />
