--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,7 @@ sitemap: false
 
 /* FONTS */
 $main-font: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+$new_hampshireregular: "new_hampshireregular"
 $heading-font: sans-serif;
 $regular-font-size: 20px;
 
