--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,6 +15,23 @@ $heading-font: sans-serif;
 $regular-font-size: 20px;
 $new_hampshireregular: "new_hampshireregular"
 
+@font-face {
+  font-family: 'new_hampshireregular';
+  src: url('newhampshire-regular-webfont.woff2') format('woff2'),
+       url('newhampshire-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+
+@font-face {
+  font-family: 'new_hampshireregular';
+  src: url('newhampshire-regular-webfont.woff2') format('woff2'),
+       url('newhampshire-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
 
 /*
   COLOR.
