--- a/_sass/_ed.scss
+++ b/_sass/_ed.scss
@@ -270,7 +270,7 @@ tbody tr:nth-child(odd) th {
 }
 
 h3.masthead-title {
-  font-family: $new-hampshire;
+  font-family: $main-font;
   font-size: 1.8rem;
   margin-top: 2px;
 }
