--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,8 +9,11 @@ sitemap: false
   Feel free to change!
 */
 
+@include font-face(new_hampshireregular, assets/new_hampshireregular);
+
 /* FONTS */
 $main-font: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+$mast-font: new_hampshireregular;
 $heading-font: sans-serif;
 $regular-font-size: 20px;
 
