--- a/_sass/_ed.scss
+++ b/_sass/_ed.scss
@@ -276,7 +276,7 @@ h3.masthead-title {
 }
 
 @font-face {
-  .h3.masthead-title {
+  .masthead-title {
   font-family: 'new_hampshireregular';
   src: url('newhampshire-regular-webfont.woff2') format('woff2'),
        url('newhampshire-regular-webfont.woff') format('woff');
