--- a/_sass/_ed.scss
+++ b/_sass/_ed.scss
@@ -261,7 +261,7 @@ tbody tr:nth-child(odd) th {
 }
 
 .masthead-title small {
-  font-family: $mast-font;
+  font-family: $main-font;
   font-size: .88rem;
   font-weight: 300;
   color: $text-color;
