--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,7 +11,7 @@ sitemap: false
 
 /* FONTS */
 $main-font: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-$mast-font: "new_hampshireregular";
+$mast-font: new_hampshireregular;
 $heading-font: sans-serif;
 $regular-font-size: 20px;
 
