--- a/_includes/head.html
+++ b/_includes/head.html
@@ -58,4 +58,9 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.baseurl }}/atom.xml" />
+
+  {% if page.title == "Storymap" %}
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
+    <link rel="stylesheet" type="text/css" href="/demos/assets/css/storymap/storymap.css">
+  {% endif %}
 </head>
