--- a/_includes/head.html
+++ b/_includes/head.html
@@ -62,5 +62,8 @@
   {% if page.title == "Storymap" %}
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
     <link rel="stylesheet" type="text/css" href="/demos/assets/css/storymap/storymap.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
+<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+<script src="https://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
   {% endif %}
 </head>
