Add sample tooltips to markers

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,10 +99,10 @@
         }) */
 
         var paths = [
-        L.marker([33, -88]),
-        L.marker([34.8, -92.2]),
-        L.marker([37, -120]),
-        L.marker([75, -90]),
+        L.marker([33, -88]).bindTooltip("The South"),
+        L.marker([34.8, -92.2]).bindTooltip("Arksansas"),
+        L.marker([37, -120]).bindTooltip("California"),
+        L.marker([75, -90]).bindTooltip("British Arctic"),
         L.marker([44, -71.5]),
         L.marker([41.013611, 28.955]),
         L.marker([44.808889, -71.869444]),
