--- a/assets/css/storymap/storymap.css
+++ b/assets/css/storymap/storymap.css
@@ -13,3 +13,21 @@
 .wrap {
     width:50vw !important;
 }
+
+.breakpoint-current {
+    left: 0;
+    margin-top: -10px;
+    position: fixed;
+   /* top: 33.3333%; */
+    width: 3px;
+    height: 3px;
+}
+
+.viewing {
+    background: #eee;
+}
+
+.storymap-main section {
+    padding: 5px 10px 10px 10px;
+    border-radius: 10px;
+}
