--- a/_sass/_ed.scss
+++ b/_sass/_ed.scss
@@ -107,7 +107,7 @@ a, .text-title a {
 /* `:focus` is linked to `:hover` for basic accessibility*/
 a:hover,
 a:focus {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 /* Headings*/
