--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -39,8 +39,7 @@
   </nav>
 
   <div class="sidebar-item">
-    <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</p>
-    <p> Unlock icon designed by <a href="https://www.freepik.com/">Freepik</a> from <a href="https://www.flaticon.com/free-icon/lock_1716807#term=unlock&page=1&position=58">Flaticon</a>.</p>
+    <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. Unlock icon designed by <a href="https://www.freepik.com/">Freepik</a> from <a href="https://www.flaticon.com/free-icon/lock_1716807#term=unlock&page=1&position=58">Flaticon</a>.</p>
   </div>
 
 </div>
