fixed white lock

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <p><img src="images/white-lock.png" align=left>   {{ site.title }}</p>
+    <p><img src="/images/white-lock.png" align=left>   {{ site.title }}</p>
   </div>
 
   <nav class="sidebar-nav">
