finished added the citations as annotations

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,7 +59,7 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.baseurl }}/atom.xml" />
 
-  {% if page.title == "Storymap" %}
+  {% if page.storymap %}
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
     <link rel="stylesheet" type="text/css" href="/demos/assets/css/storymap/storymap.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
